force-app/main/default/objects/AccountContactRelation/fields/Send_Enrollment_Survey__c.field-meta.xml
<CustomField>
    <fullName>Send_Enrollment_Survey__c</fullName>
    <formula>IF(INCLUDES(Roles, &quot;Client Implementation Lead / POC&quot;),TRUE,
			IF(INCLUDES(Roles, &quot;Client Success Lead / POC&quot;),TRUE,
						IF(INCLUDES(Roles, &quot;Enrollment Marketing POC&quot;),TRUE,FALSE)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send Enrollment Survey</label>
    <type>Checkbox</type>
</CustomField>